--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "description": "",
   "dependencies": {
     "@screenpipe/js": "^1.0.21",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "groq-sdk": "^0.19.0",
+    "redis": "^4.7.0"
   }
 }
