Working base app

--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -23,6 +23,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(frontend
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        suggestionpopup.h
+        suggestionpopup.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET frontend APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
