--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,21 @@ CMakeLists.txt.user*
 threads.json
 settings.json
 user_response.json
+
+# CMake
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Ww][Ii][Nn]32/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+out/
