--- a/.gitignore
+++ b/.gitignore
@@ -255,3 +255,16 @@ bld/
 [Ll]og/
 [Ll]ogs/
 out/
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
