--- a/frontend/CMakeLists.txt
+++ b/frontend/CMakeLists.txt
@@ -25,6 +25,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         ${PROJECT_SOURCES}
         suggestionpopup.h
         suggestionpopup.cpp
+        debugwindow.cpp
+        debugwindow.h
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET frontend APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
